@@ -1,4 +1,4 @@
 DIST maven-monitor-2.0.tar.bz2 5599 RMD160 cd148e5aab349883c16238ca5580f68bb4c7b3c2 SHA1 9dc64d170a3038a0fd071d342c31e18c532944f6 SHA256 b4e1dd46b1bd041396039aba14c3bb24fb1ecf72375da1a313517ee0d87a3cbf
-EBUILD maven-monitor-2.0.ebuild 462 RMD160 32ed5ea2dcb8c96ff2a1c1cd359d6f22942096fa SHA1 67a3d506a1b82021e3b3965bf4ac5a9c6fb4557a SHA256 73c49fb8227f86b9a2c996dd1d9ae8d6d021b67b51952b9da8e57f76be859195
-MISC ChangeLog 255 RMD160 8bd076ee0478df06bb82a1f8405464ec6da8934f SHA1 9ea2c05deaffdc4f0740e8efc02eed4cf665bf5b SHA256 6c951e93911c7f7bcbc44d0ea5858dacf8de981c4758e903fc37dc8a7efc439b
+EBUILD maven-monitor-2.0.ebuild 576 RMD160 19b340cbd50dac013958ac95d56b932386766e03 SHA1 4bec40490d544b2da55093ded907899de7d810bb SHA256 6f3cb04379c9fcdba24f2927b4766d89c9b71757285d0841b46357c098717c03
+MISC ChangeLog 403 RMD160 596342df17c87a330921107f077fee9d57b9469d SHA1 6950677d78c56d72d425d32415bac83b8b417570 SHA256 b2d5e519421f6f665cecc53774c2c9bd41b35f04360ef4b23b1393f652ba6a2f
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
