@@ -2,6 +2,8 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
+JAVA_PKG_IUSE="source"
+
 inherit java-maven-2
 
 DESCRIPTION="Maven is a software project management and comprehension tool."
@@ -9,9 +11,12 @@ HOMEPAGE="http://maven.apache.org/"
 SRC_URI="http://dev.gentooexperimental.org/~kiorky/${P}.tar.bz2"
 LICENSE="Apache-2.0"
 SLOT="0"
-KEYWORDS="~x86"
-IUSE="source doc"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
 DEP=""
 DEPEND=">=virtual/jdk-1.4 ${DEP}"
 RDEPEND=">=virtual/jre-1.4 ${DEP}"
 
+#Tests failing at least for the present.
+RESTRICT="test"
+JAVA_PKG_SRC_DIRS="src/main/java/*"
