@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 May 2007; Alistair John Bush <ali_bush@gentoo.org>
+  maven-monitor-2.0.ebuild:
+  Added to ~amd64, restrict test and add SRC_DIRS var commit .
+
   01 May 2007; kiorky <kiorky@cryptelium.net> +maven-monitor-2.0.6.ebuild,
   +metadata.xml:
   Added as a maven dependency, #177481
